Add MongoDB integration and update API functions with error handling

--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "id": "3de972c3",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,19 +31,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b987e901",
+   "metadata": {},
+   "source": [
+    "### Functions\n",
+    "\n",
+    "- `getChannel(channelId: str) -> dict | None` : Returns channel data\n",
+    "\n",
+    "- `getTrending(regionCode: str) -> dict | None` : Returns trending video data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e48797d4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'error': {'code': 400, 'message': 'API key not valid. Please pass a valid API key.', 'errors': [{'message': 'API key not valid. Please pass a valid API key.', 'domain': 'global', 'reason': 'badRequest'}], 'status': 'INVALID_ARGUMENT', 'details': [{'@type': 'type.googleapis.com/google.rpc.ErrorInfo', 'reason': 'API_KEY_INVALID', 'domain': 'googleapis.com', 'metadata': {'service': 'youtube.googleapis.com'}}, {'@type': 'type.googleapis.com/google.rpc.LocalizedMessage', 'locale': 'en-US', 'message': 'API key not valid. Please pass a valid API key.'}]}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import os\n",
@@ -52,26 +56,92 @@
     "\n",
     "\n",
     "def getChannel(channelId: str)  -> dict | None:\n",
+    "      if channelId is None:\n",
+    "            return None\n",
+    "      \n",
     "      getChannelUrl = f\"https://www.googleapis.com/youtube/v3/channels?part=snippet,statistics&id={channelId}&key={os.getenv('YOUTUBE_API_KEY')}\"\n",
     "\n",
     "      try:\n",
     "            response = requests.get(getChannelUrl)\n",
     "            data = response.json()\n",
     "            return data\n",
-    "      except requests.exceptions.RequestException as e:\n",
+    "      except :\n",
     "            return None\n",
     "\n",
     "\n",
-    "def getTrending() -> dict | None:\n",
-    "      getTrendingUrl = f\"https://www.googleapis.com/youtube/v3/videos?part=snippet,statistics,contentDetails&chart=mostPopular&regionCode={regionCode}&maxResults=25&key={os.getenv('YOUTUBE_API_KEY')}\"\n",
+    "def getTrending(regionCode: str) -> dict | None:\n",
+    "      if regionCode is None:\n",
+    "            regionCode = \"US\"\n",
+    "            \n",
+    "      getTrendingUrl = f\"https://www.googleapis.com/youtube/v3/videos?part=snippet,statistics,contentDetails&chart=mostPopular&regionCode={regionCode}&maxResults=20&key={os.getenv('YOUTUBE_API_KEY')}\"\n",
     "\n",
     "      try:\n",
     "            response = requests.get(getTrendingUrl)\n",
     "            data = response.json()\n",
     "            return data\n",
-    "      except requests.exceptions.RequestException as e:\n",
+    "      except :\n",
     "            return None"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d9ef2f7",
+   "metadata": {},
+   "source": [
+    "- Saving Raw Data's to MongoDB noSQL Db "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e45d3d90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from pymongo.mongo_client import MongoClient\n",
+    "from pymongo.server_api import ServerApi\n",
+    "from datetime import datetime\n",
+    "\n",
+    "uri = \"mongodb+srv://striversahil:AE7ty5zvAkK6vDaL@cluster0.ldfzomn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"\n",
+    "\n",
+    "# Create a new client and connect to the server\n",
+    "client = MongoClient(uri, server_api=ServerApi('1'))\n",
+    "\n",
+    "Db = client[\"TubeTrends\"]\n",
+    "# channelDb = client[\"Channel\"]\n",
+    "\n",
+    "# Storing the trending data with timestamp\n",
+    "def StoreTrending(data : dict):\n",
+    "      trendingData = {\n",
+    "          \"timestamp\" : datetime.now(),\n",
+    "          \"trending_data\" : data\n",
+    "      }\n",
+    "      try:\n",
+    "            Db[\"Trending\"].insert_one(trendingData)\n",
+    "            return True\n",
+    "      except :\n",
+    "            return None\n",
+    "      \n",
+    "# data = getTrending(regionCode)\n",
+    "# StoreTrending(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7604463",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6b1b209",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
