Add PostgreSQL schema and update env with Postgres URI

--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "3de972c3",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "True"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,13 +132,71 @@
    "execution_count": null,
    "id": "f7604463",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Something went wrong 😬: \n",
+      " no results to fetch\n"
+     ]
+    }
+   ],
+   "source": [
+    "import psycopg2\n",
+    "import os\n",
+    "\n",
+    "conn = psycopg2.connect(os.getenv('POSTGRES_URI'))\n",
+    "conn.autocommit = True\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "try:\n",
+    "    cur.execute(\"CREATE TABLE IF NOT EXISTS test (id UUID PRIMARY KEY DEFAULT gen_random_uuid(), num integer, data varchar);\")\n",
+    "    cur.execute(\"INSERT INTO test (num, data) VALUES (42, 'Hello World!')\")\n",
+    "\n",
+    "\n",
+    "    print(\"Table created! 🎉\")\n",
+    "except Exception as e:\n",
+    "    print(\"Something went wrong 😬: \\n\", e)\n",
+    "\n",
+    "# cur.execute(\"SELECT NOW()\")\n",
+    "# print(cur.fetchone())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f6b1b209",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('8af5d6f4-39ab-4807-9fcb-bac9fb69be77', 42, 'Hello World!'), ('063e9587-9fd1-4f21-9730-f1b64fab9d13', 42, 'Hello World!'), ('a5eba31e-ba66-4b48-b1c0-87557d549813', 42, 'Hello World!'), ('5740bb77-947d-4d19-98fb-16a218e452d3', 42, 'Hello World!'), ('012a337a-9e4e-416e-bcd1-563c6ec85062', 42, 'Hello World!'), ('b0cb388c-f02b-46e0-b895-dc4e4e466f6a', 42, 'Hello World!'), ('af8eb53e-5f56-43db-a058-eaa429209ac1', 42, 'Hello World!'), ('cd3758c7-ad44-4a82-acbf-271b7bafc0f0', 42, 'Hello World!')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "try :\n",
+    "    cur.execute(\"SELECT * FROM test\")\n",
+    "    print(cur.fetchall())\n",
+    "except Exception as e:\n",
+    "    print(\"Something went wrong 😬: \\n\", e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "887f3631",
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6b1b209",
+   "id": "d288aae9",
    "metadata": {},
    "outputs": [],
    "source": []
