Convert raw video and channel statistics from string to integer data types

--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -10,126 +10,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "3de972c3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from dotenv import load_dotenv\n",
-    "load_dotenv()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b987e901",
-   "metadata": {},
-   "source": [
-    "### Functions\n",
-    "\n",
-    "- `getChannel(channelId: str) -> dict | None` : Returns channel data\n",
-    "\n",
-    "- `getTrending(regionCode: str) -> dict | None` : Returns trending video data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e48797d4",
-   "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
+    "import psycopg2\n",
     "import os\n",
-    "regionCode = \"IN\"\n",
-    "channelId = \"UC_x5XG1OV2P6uZZ5FSM9Ttw\"\n",
-    "\n",
-    "\n",
-    "def getChannel(channelId: str)  -> dict | None:\n",
-    "      if channelId is None:\n",
-    "            return None\n",
-    "      \n",
-    "      getChannelUrl = f\"https://www.googleapis.com/youtube/v3/channels?part=snippet,statistics&id={channelId}&key={os.getenv('YOUTUBE_API_KEY')}\"\n",
-    "\n",
-    "      try:\n",
-    "            response = requests.get(getChannelUrl)\n",
-    "            data = response.json()\n",
-    "            return data\n",
-    "      except :\n",
-    "            return None\n",
-    "\n",
-    "\n",
-    "def getTrending(regionCode: str) -> dict | None:\n",
-    "      if regionCode is None:\n",
-    "            regionCode = \"US\"\n",
-    "            \n",
-    "      getTrendingUrl = f\"https://www.googleapis.com/youtube/v3/videos?part=snippet,statistics,contentDetails&chart=mostPopular&regionCode={regionCode}&maxResults=20&key={os.getenv('YOUTUBE_API_KEY')}\"\n",
-    "\n",
-    "      try:\n",
-    "            response = requests.get(getTrendingUrl)\n",
-    "            data = response.json()\n",
-    "            return data\n",
-    "      except :\n",
-    "            return None"
+    "import pandas as pd\n",
+    "from IPython.display import display\n",
+    "conn = psycopg2.connect(os.getenv('POSTGRES_URI'))\n",
+    "conn.autocommit = True\n",
+    "cur = conn.cursor()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6d9ef2f7",
+   "id": "f23bfb5a",
    "metadata": {},
    "source": [
-    "- Saving Raw Data's to MongoDB noSQL Db "
+    "- Getting the Data from PostgreSql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e45d3d90",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "from pymongo.mongo_client import MongoClient\n",
-    "from pymongo.server_api import ServerApi\n",
-    "from datetime import datetime\n",
-    "\n",
-    "uri = \"mongodb+srv://striversahil:AE7ty5zvAkK6vDaL@cluster0.ldfzomn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"\n",
-    "\n",
-    "# Create a new client and connect to the server\n",
-    "client = MongoClient(uri, server_api=ServerApi('1'))\n",
-    "\n",
-    "Db = client[\"TubeTrends\"]\n",
-    "# channelDb = client[\"Channel\"]\n",
-    "\n",
-    "# Storing the trending data with timestamp\n",
-    "def StoreTrending(data : dict):\n",
-    "      trendingData = {\n",
-    "          \"timestamp\" : datetime.now(),\n",
-    "          \"trending_data\" : data\n",
-    "      }\n",
-    "      try:\n",
-    "            Db[\"Trending\"].insert_one(trendingData)\n",
-    "            return True\n",
-    "      except :\n",
-    "            return None\n",
-    "      \n",
-    "# data = getTrending(regionCode)\n",
-    "# StoreTrending(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "f7604463",
    "metadata": {},
    "outputs": [
@@ -137,39 +42,195 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Something went wrong 😬: \n",
-      " no results to fetch\n"
+      "DataFrame shape:  (40, 14)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>videoid</th>\n",
+       "      <th>title</th>\n",
+       "      <th>trending_id</th>\n",
+       "      <th>publishedat</th>\n",
+       "      <th>channelid</th>\n",
+       "      <th>channelname</th>\n",
+       "      <th>thumbnail</th>\n",
+       "      <th>tags</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>viewcount</th>\n",
+       "      <th>likecount</th>\n",
+       "      <th>commentcount</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7c62c2a1-84ff-4f5b-a34d-f3c9e68ca59e</td>\n",
+       "      <td>YH6k5weqwy8</td>\n",
+       "      <td>Sitaare Zameen Par | Official Trailer | Aamir Khan | Genelia Deshmukh | 20th June 2025</td>\n",
+       "      <td>6826b90c7d9dfec2a733e0c3</td>\n",
+       "      <td>2025-05-13 14:40:15</td>\n",
+       "      <td>UCqjQu9qgL_eDXPwRnq45ZDQ</td>\n",
+       "      <td>Aamir Khan Talkies</td>\n",
+       "      <td>https://i.ytimg.com/vi/YH6k5weqwy8/mqdefault.jpg</td>\n",
+       "      <td>[sitaare zameen par trailer, aamir khan, genelia deshmukh, aamir khan productions, sitaare zameen par, amir khan, sitare zamin par, sitare zameen par, sitare, sitare trler, sitaare zameen par trilr, genelia dsouza, taare zameen par, tare zameen par, tzp, taare zameen par sequel, zamen, zamin, sitara]</td>\n",
+       "      <td>PT3M29S</td>\n",
+       "      <td>66608376</td>\n",
+       "      <td>672696</td>\n",
+       "      <td>45490</td>\n",
+       "      <td>2025-05-16 04:03:33.536799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>67aa117b-d609-465b-950f-25ea774d85dc</td>\n",
+       "      <td>cgLUqSt5ygY</td>\n",
+       "      <td>NRFM School Series | Episode - Class Leader | 4K | NRFM Brothers</td>\n",
+       "      <td>6826b90c7d9dfec2a733e0c3</td>\n",
+       "      <td>2025-05-14 09:30:07</td>\n",
+       "      <td>UCj192VhZ_Ubg2PUR6AOaY1Q</td>\n",
+       "      <td>NRFM BROTHERS</td>\n",
+       "      <td>https://i.ytimg.com/vi/cgLUqSt5ygY/mqdefault.jpg</td>\n",
+       "      <td>[school, students, teacher, shortfilm, nrfm, webseries, tamilloveshortfilm, tamil, tamilshortfilm, love, old school vibes, throwback memories, childhood memories, flashback fun, vintage memories, school friends, school friends series, school friends movie, school friends review, school life, school friends web series, school friends episode 1, school love story, latest web series, school friends web series episode 1, new web series, web series movie, new web series 2023, comedy]</td>\n",
+       "      <td>PT15M20S</td>\n",
+       "      <td>770691</td>\n",
+       "      <td>32684</td>\n",
+       "      <td>1780</td>\n",
+       "      <td>2025-05-16 04:03:33.687878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00ae614a-8b4c-4fbf-9934-395ccc70f007</td>\n",
+       "      <td>y6E7RFM7GdM</td>\n",
+       "      <td>I hid in @FukraInsaan 's Room &amp; Exposed his SECRETS 😲</td>\n",
+       "      <td>6826b90c7d9dfec2a733e0c3</td>\n",
+       "      <td>2025-05-14 08:31:40</td>\n",
+       "      <td>UCtyltqstMm6iKnkk2Y9Zt8A</td>\n",
+       "      <td>Wanderers Hub</td>\n",
+       "      <td>https://i.ytimg.com/vi/y6E7RFM7GdM/mqdefault.jpg</td>\n",
+       "      <td>[wanderers hub, challenges, VLOGS, comedy, entertainment, hindi vlog, i hid in fukra insaan room, fukra insaan room, fukra insaan secrets, exposing fukra insaan, fukra insaan secrets exposed, exposed fukra insaan, abhishek malhan, triggered insaan, wanderer, wanderers hub hiding]</td>\n",
+       "      <td>PT22M23S</td>\n",
+       "      <td>2856958</td>\n",
+       "      <td>110457</td>\n",
+       "      <td>2713</td>\n",
+       "      <td>2025-05-16 04:03:33.838697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>f46cf4b1-61d0-4e62-a10f-ba2c78ff6261</td>\n",
+       "      <td>kUcF1FWMZUc</td>\n",
+       "      <td>Andhra King Taluka - Title Glimpse | Ram Pothineni | Upendra | Mahesh Babu P | Bhagyashri Borse</td>\n",
+       "      <td>6826b90c7d9dfec2a733e0c3</td>\n",
+       "      <td>2025-05-15 05:37:01</td>\n",
+       "      <td>UCKZSn5C-RzrLjuWJF8wWiDw</td>\n",
+       "      <td>Mythri Movie Makers</td>\n",
+       "      <td>https://i.ytimg.com/vi/kUcF1FWMZUc/mqdefault.jpg</td>\n",
+       "      <td>[Andhra King Taluka Title Glimpse, Ram Pothineni, Upendra, Mahesh Babu P, Bhagyashri Borse, Rao Ramesh, Murali Sharma, Satya, Rahul Ramakrishna, Naveen Yerneni, Y Ravi Shankar, Mythri Movie Makers, Andhra King Taluka, Happy Birthday RAPO, Latest Telugu Movies 2025, RAPO New Movie Update, Ram Pothineni New Movie, Ram Pothineni Title Glimpse, Andhra King, Andhra King Movie, Andhra King Taluka Movie, Andhra King Glimpse, Andhra King Thaluka, Andhra King Teaser]</td>\n",
+       "      <td>PT1M56S</td>\n",
+       "      <td>11479770</td>\n",
+       "      <td>182973</td>\n",
+       "      <td>2714</td>\n",
+       "      <td>2025-05-16 04:03:33.989552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0adfb0dd-603d-4055-a6c3-577867be56fa</td>\n",
+       "      <td>Ox8ZLF6cGM0</td>\n",
+       "      <td>Superman | Official Trailer | DC</td>\n",
+       "      <td>6826b90c7d9dfec2a733e0c3</td>\n",
+       "      <td>2025-05-14 15:45:45</td>\n",
+       "      <td>UCiifkYAs_bq1pt_zbNAzYGg</td>\n",
+       "      <td>DC</td>\n",
+       "      <td>https://i.ytimg.com/vi/Ox8ZLF6cGM0/mqdefault.jpg</td>\n",
+       "      <td>[2025, Anthony Carrigan, BehindTheScenesLook, Clark Kent, Coming Soon, DC, DC Comics, DC Studios, DCU, David Corenswet, Edi Gathegi, IMAX, Isabela Merced, James Gunn, July 2025, Lex Luthor, Lois Lane, Nathan Fillion, Nicholas Hoult, Rachel Brosnahan, Superman, Superman Day, Superman Day 2025, Superman2025, Trailer 2025, WB, WBD, Warner Bros, Warner Bros Pictures, Warner Brothers]</td>\n",
+       "      <td>PT3M</td>\n",
+       "      <td>15644119</td>\n",
+       "      <td>438883</td>\n",
+       "      <td>33104</td>\n",
+       "      <td>2025-05-16 04:03:34.140606</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     id      videoid                                                                                            title               trending_id         publishedat                 channelid          channelname                                         thumbnail                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 tags  duration viewcount likecount commentcount                  timestamp\n",
+       "0  7c62c2a1-84ff-4f5b-a34d-f3c9e68ca59e  YH6k5weqwy8           Sitaare Zameen Par | Official Trailer | Aamir Khan | Genelia Deshmukh | 20th June 2025  6826b90c7d9dfec2a733e0c3 2025-05-13 14:40:15  UCqjQu9qgL_eDXPwRnq45ZDQ   Aamir Khan Talkies  https://i.ytimg.com/vi/YH6k5weqwy8/mqdefault.jpg                                                                                                                                                                                        [sitaare zameen par trailer, aamir khan, genelia deshmukh, aamir khan productions, sitaare zameen par, amir khan, sitare zamin par, sitare zameen par, sitare, sitare trler, sitaare zameen par trilr, genelia dsouza, taare zameen par, tare zameen par, tzp, taare zameen par sequel, zamen, zamin, sitara]   PT3M29S  66608376    672696        45490 2025-05-16 04:03:33.536799\n",
+       "1  67aa117b-d609-465b-950f-25ea774d85dc  cgLUqSt5ygY                                 NRFM School Series | Episode - Class Leader | 4K | NRFM Brothers  6826b90c7d9dfec2a733e0c3 2025-05-14 09:30:07  UCj192VhZ_Ubg2PUR6AOaY1Q        NRFM BROTHERS  https://i.ytimg.com/vi/cgLUqSt5ygY/mqdefault.jpg  [school, students, teacher, shortfilm, nrfm, webseries, tamilloveshortfilm, tamil, tamilshortfilm, love, old school vibes, throwback memories, childhood memories, flashback fun, vintage memories, school friends, school friends series, school friends movie, school friends review, school life, school friends web series, school friends episode 1, school love story, latest web series, school friends web series episode 1, new web series, web series movie, new web series 2023, comedy]  PT15M20S    770691     32684         1780 2025-05-16 04:03:33.687878\n",
+       "2  00ae614a-8b4c-4fbf-9934-395ccc70f007  y6E7RFM7GdM                                            I hid in @FukraInsaan 's Room & Exposed his SECRETS 😲  6826b90c7d9dfec2a733e0c3 2025-05-14 08:31:40  UCtyltqstMm6iKnkk2Y9Zt8A        Wanderers Hub  https://i.ytimg.com/vi/y6E7RFM7GdM/mqdefault.jpg                                                                                                                                                                                                             [wanderers hub, challenges, VLOGS, comedy, entertainment, hindi vlog, i hid in fukra insaan room, fukra insaan room, fukra insaan secrets, exposing fukra insaan, fukra insaan secrets exposed, exposed fukra insaan, abhishek malhan, triggered insaan, wanderer, wanderers hub hiding]  PT22M23S   2856958    110457         2713 2025-05-16 04:03:33.838697\n",
+       "3  f46cf4b1-61d0-4e62-a10f-ba2c78ff6261  kUcF1FWMZUc  Andhra King Taluka - Title Glimpse | Ram Pothineni | Upendra | Mahesh Babu P | Bhagyashri Borse  6826b90c7d9dfec2a733e0c3 2025-05-15 05:37:01  UCKZSn5C-RzrLjuWJF8wWiDw  Mythri Movie Makers  https://i.ytimg.com/vi/kUcF1FWMZUc/mqdefault.jpg                       [Andhra King Taluka Title Glimpse, Ram Pothineni, Upendra, Mahesh Babu P, Bhagyashri Borse, Rao Ramesh, Murali Sharma, Satya, Rahul Ramakrishna, Naveen Yerneni, Y Ravi Shankar, Mythri Movie Makers, Andhra King Taluka, Happy Birthday RAPO, Latest Telugu Movies 2025, RAPO New Movie Update, Ram Pothineni New Movie, Ram Pothineni Title Glimpse, Andhra King, Andhra King Movie, Andhra King Taluka Movie, Andhra King Glimpse, Andhra King Thaluka, Andhra King Teaser]   PT1M56S  11479770    182973         2714 2025-05-16 04:03:33.989552\n",
+       "4  0adfb0dd-603d-4055-a6c3-577867be56fa  Ox8ZLF6cGM0                                                                 Superman | Official Trailer | DC  6826b90c7d9dfec2a733e0c3 2025-05-14 15:45:45  UCiifkYAs_bq1pt_zbNAzYGg                   DC  https://i.ytimg.com/vi/Ox8ZLF6cGM0/mqdefault.jpg                                                                                                       [2025, Anthony Carrigan, BehindTheScenesLook, Clark Kent, Coming Soon, DC, DC Comics, DC Studios, DCU, David Corenswet, Edi Gathegi, IMAX, Isabela Merced, James Gunn, July 2025, Lex Luthor, Lois Lane, Nathan Fillion, Nicholas Hoult, Rachel Brosnahan, Superman, Superman Day, Superman Day 2025, Superman2025, Trailer 2025, WB, WBD, Warner Bros, Warner Bros Pictures, Warner Brothers]      PT3M  15644119    438883        33104 2025-05-16 04:03:34.140606"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 40 entries, 0 to 39\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column        Non-Null Count  Dtype         \n",
+      "---  ------        --------------  -----         \n",
+      " 0   id            40 non-null     object        \n",
+      " 1   videoid       40 non-null     object        \n",
+      " 2   title         40 non-null     object        \n",
+      " 3   trending_id   40 non-null     object        \n",
+      " 4   publishedat   40 non-null     datetime64[ns]\n",
+      " 5   channelid     40 non-null     object        \n",
+      " 6   channelname   40 non-null     object        \n",
+      " 7   thumbnail     40 non-null     object        \n",
+      " 8   tags          40 non-null     object        \n",
+      " 9   duration      40 non-null     object        \n",
+      " 10  viewcount     40 non-null     object        \n",
+      " 11  likecount     40 non-null     object        \n",
+      " 12  commentcount  40 non-null     object        \n",
+      " 13  timestamp     40 non-null     datetime64[ns]\n",
+      "dtypes: datetime64[ns](2), object(12)\n",
+      "memory usage: 4.5+ KB\n",
+      "DataFrame head:  None\n"
      ]
     }
    ],
    "source": [
-    "import psycopg2\n",
-    "import os\n",
-    "\n",
-    "conn = psycopg2.connect(os.getenv('POSTGRES_URI'))\n",
-    "conn.autocommit = True\n",
-    "cur = conn.cursor()\n",
-    "\n",
     "try:\n",
-    "    cur.execute(\"CREATE TABLE IF NOT EXISTS test (id UUID PRIMARY KEY DEFAULT gen_random_uuid(), num integer, data varchar);\")\n",
-    "    cur.execute(\"INSERT INTO test (num, data) VALUES (42, 'Hello World!')\")\n",
+    "    cur.execute(\"Select * from video \")\n",
     "\n",
+    "    df = pd.DataFrame(cur.fetchall(), columns=[desc[0] for desc in cur.description])\n",
     "\n",
-    "    print(\"Table created! 🎉\")\n",
+    "    print(\"DataFrame shape: \", df.shape)\n",
+    "    \n",
+    "    display(df.head(5))\n",
+    "\n",
+    "    print(\"DataFrame head: \", df.info())\n",
+    "    \n",
     "except Exception as e:\n",
     "    print(\"Something went wrong 😬: \\n\", e)\n",
     "\n",
     "# cur.execute(\"SELECT NOW()\")\n",
     "# print(cur.fetchone())\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "887f3631",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
